2009-02-19  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=24012
        Clarify objective of the test and clean up.

        * fast/forms/inline-ignored-on-legend-expected.txt:
        * fast/forms/inline-ignored-on-legend.html:

2009-02-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24012
        Convert inline-ignored-on-legend to text-only test.

        * fast/forms/inline-ignored-on-legend-expected.txt: Added.
        * fast/forms/inline-ignored-on-legend.html: Changed to text-only.
        * platform/mac/fast/forms/inline-ignored-on-legend-expected.checksum: Removed.
        * platform/mac/fast/forms/inline-ignored-on-legend-expected.png: Removed.
        * platform/mac/fast/forms/inline-ignored-on-legend-expected.txt: Removed.

2009-02-17  Peter Abrahamsen  <rainhead@gmail.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=23958
        <rdar://problem/6587815>

        Updated XMLHttpRequests tests to match the newest Access Control draft.

        * http/tests/security/originHeader/resources/print-origin.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-allow-access-control-origin-header.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-allow-print-headers.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-allow-star.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-allow.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-get-fail-non-simple.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-non-get-allow.cgi:
        * http/tests/xmlhttprequest/resources/access-control-basic-preflight-cache-invalidation.php:
        * http/tests/xmlhttprequest/resources/access-control-basic-preflight-cache-timeout.php: